# sp500-nasdaq-under20

./: README.md  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: tests.yml  update-under20-stocks.yml
data/: README.md  nasdaq_tickers.csv  run_log.csv  under20_history.csv
data_under_20/: AES_history_until_20251212.csv  AMCR_history_until_20251212.csv  BAX_history_until_20251212.csv  CAG_history_until_20251212.csv  DOC_history_until_20251212.csv  F_history_until_20251212.csv  HBAN_history_until_20251212.csv  HST_history_until_20251212.csv  KVUE_history_until_20251212.csv  PCG_history_until_20251212.csv  PSKY_history_until_20251212.csv  VTRS_history_until_20251212.csv
scripts/: config.py  log_config.py  run_logger.py  schemas.py  under20_stocks.py  under20_stocks_log.py  update_under20_master_csv.py  update_under20_master_csv_log.py
scripts/data/: nasdaq_tickers.csv
scripts/data_under_20/: AES_history_until_20251211.csv  AMCR_history_until_20251211.csv  BAX_history_until_20251211.csv  CAG_history_until_20251211.csv  DOC_history_until_20251211.csv  F_history_until_20251211.csv  HBAN_history_until_20251211.csv  HST_history_until_20251211.csv  KVUE_history_until_20251211.csv  PCG_history_until_20251211.csv  PSKY_history_until_20251211.csv  VTRS_history_until_20251211.csv
tests/: conftest.py  test_config_and_run_logger.py  test_schemas.py  test_under20.py
