[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

# ---------------------------------------------------------------------------
# Project metadata
# ---------------------------------------------------------------------------

[project]
name = "sp500-nasdaq-under20"
version = "0.1.0"
description = "Daily OHLCV history for S&P 500 + NASDAQ-100 stocks trading below a price ceiling."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
dependencies = [
    "pandas[lxml]>=2.0",
    "yfinance>=1.2.1",
    "lxml>=5",
    "requests>=2.32",
    "pandera>=0.18",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.4",
    "pre-commit>=3",
]

# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------

[tool.pytest.ini_options]
testpaths   = ["tests"]
addopts     = "-v --tb=short"

# Stream log output live in the terminal so CI shows progress without -s
log_cli       = true
log_cli_level = "INFO"
log_format    = "%(asctime)s [%(levelname)-8s] %(name)s: %(message)s"
log_date_format = "%H:%M:%S"

# ---------------------------------------------------------------------------
# ruff — linter + formatter
# ---------------------------------------------------------------------------

[tool.ruff]
target-version = "py311"
line-length    = 100
src            = ["scripts", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "SIM",  # flake8-simplify
    "TID",  # flake8-tidy-imports
    "RUF",  # ruff-specific
]
ignore = [
    "E501",   # line too long — formatter handles this
    "B008",   # do not perform function calls in default arguments
    "SIM108", # ternary operator — sometimes less readable
]

# BLE001 (blind exception) is used intentionally in the batch-download loops
# to ensure a single failed ticker never aborts the whole batch.
# E402 (module-level import not at top) is needed in update_under20_master_csv.py
# after the sys.path insertion block.
[tool.ruff.lint.per-file-ignores]
"scripts/under20_stocks.py"            = ["BLE001"]
"scripts/update_under20_master_csv.py" = ["BLE001", "E402"]

[tool.ruff.lint.isort]
known-first-party = ["config", "log_config", "schemas", "under20_stocks", "update_under20_master_csv"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
